main activity design

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">BMICalculator</string>
+    <string name="bmiTitle">Calculate your BMI</string>
 </resources>
